@@ -1,5 +1,6 @@
-08-Aug-2012 - prg - all: updated FSF address
-08-Aug-2012 - prg - sdl: added SDL.Input.EnableOppositeDirectional option.  allows/disallows simultaneous right+left / up+down.
+06-Aug-2012 - prg - gtk: added hotkey gui config
+04-Aug-2012 - prg - all: updated FSF address
+04-Aug-2012 - prg - sdl: added SDL.Input.EnableOppositeDirectional option.  allows/disallows simultaneous right+left / up+down.
 25-Jul-2012 - AnS - Taseditor: auto-starting Note editing when creating Marker by double-click
 19-Jul-2012 - AnS - Taseditor: Lua registermanual allows changing the "Run function" button caption; Markers are always restored when deploying Bookmarks
 01-Jul-2012 - AnS - new hotkey "Run Manual Lua function"
